Renamed folder to datatypes-Operators and updated relationalOperators

--- a/JavaScript/datatypes-Operators/Operators/relationalOperators.html
+++ b/JavaScript/datatypes-Operators/Operators/relationalOperators.html
@@ -18,4 +18,4 @@
 <body>
     <h1>Relational Operators</h1>
 </body>
-</html>C:\Users\Govindh Ramanan\Desktop\Course\Software\Web tech\JavaScript\datatypes & Operators\Operators\relationalOperators.html
+</html>
