added jre folder

--- a/JavaScript/Functions/Basics.html
+++ b/JavaScript/Functions/Basics.html
@@ -6,6 +6,34 @@
     <title>Functions</title>
     <script>
         //function declaration
+        main()
+        function main(){
+            console.log("Main starts")
+            console.log("Main ends")
+        }
+       // function (){} error
+        //function expression
+        let f=function main1(){
+            console.log("f starts")
+            console.log("f ends")
+        }
+        //main1()
+        console.log(f)
+        f()
+        //anonymous function
+        let f1=function (){
+            console.log("f1 starts")
+            console.log("f1 ends")
+        }
+        console.log(f1)
+        f1()
+        //arrow function
+        let f2=()=>{
+            console.log("f2 starts")
+            console.log("f2 ends")
+        }
+        console.log(f2)
+        f2()
         
 
     </script>
