--- a/JavaScript/loopingStatements/basic.html
+++ b/JavaScript/loopingStatements/basic.html
@@ -6,8 +6,7 @@
     <title>looping statments</title>
     <script>
         /* i --> iterator
-		  for(initialization;condition;increment/decrement) {
-          }
+		  for(initialization;condition;increment/decrement) {}
 		 */
 		let i;
 		ForLoop://labels
@@ -17,7 +16,7 @@
 			for (i=1;i<=4;i++) {
 				console.log("For loop");
 				break ForLoop;//labelled break
-				//break,continue jumping statements
+				//break,continue,return jumping statements
 			}
 		}
 		let a=0,b=1;
